# whisper-scribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  transcribe.py
data/: .gitkeep
docs/: API_REFERENCE.md  ARCHITECTURE.md
lib/: __init__.py  config.py  progress.py  srt.py  transcribers.py  utils.py
